# slimDQN

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
experiments/: __init__.py
experiments/CarOnHill/: FQI.py  car_on_hill_dqn.json  compute_metrics.py  dqn.py  optimal.py  plot_utils.py  plots.ipynb  plots.py  sample_utils.py  visualization.py
experiments/ChainWalk/: chain.json  dqn.py  parser.py
experiments/LunarLander/: DQN.py  visualization.py
experiments/atari/: dqn.py  visualization.py
experiments/base/: DQN.py  FQI.py  __init__.py  compute_iqm.py  dqn.py  fqi.py  iqm.py  load_parameters.py  logger.py  parser.py  parser_argument.py  plot_iqm.ipynb  plot_iqm.py  plotter.py  run.py  utils.py
experiments/car_on_hill/: FQI.py  Q*.npy  V*.npy  compute_metrics.py  fqi.py  optimal.py  plot_utils.py  plots.ipynb  sample_utils.py  visualization.py
experiments/lunar_lander/: DQN.py  __init__.py  dqn.py  plot_iqm.ipynb  visualization.py
launch_job/: create_tmux.sh  parse_arguments.sh
launch_job/atari/: cluster_dqn.sh  local_dqn.sh  profile_dqn.sh  train.sh
launch_job/car_on_hill/: launch_cluster.sh  launch_cluster_fqi.sh  launch_local.sh  launch_local_fqi.sh  parse_arguments.sh  train_fqi.sh
launch_job/lunar_lander/: cluster_dqn.sh  launch_cluster.sh  launch_cluster_dqn.sh  launch_gpu.sh  launch_local.sh  local_dqn.sh  parse_arguments.sh  train.sh  train_dqn.sh
rl/core/: serialization.py
rl/environments/: car_on_hill.py  chain.py  environment.py  finite_mdp.py
rl/rl_utils/: spaces.py
rl/utils/: torch.py  viewer.py
slimDQN/environments/: atari.py  lunar_lander.py
slimDQN/networks/: dqn.py
slimDQN/networks/architectures/: dqn.py
slimDQN/sample_collection/: replay_buffer.py  utils.py
slimRL/environments/: README.md  __init__.py  car_on_hill.py  chain.py  environment.py  finite_mdp.py  lunar_lander.py  viewer.py
slimRL/environments/solvers/: car_on_hill.py
slimRL/environments/visualization/: car_on_hill.py
slimRL/networks/: DQN.py  dqn.py
slimRL/rl_utils/: misc.py  replay_buffer.py
slimRL/sample_collection/: count_samples.py  replay_buffer.py  utils.py
slimRL/utils/: logger.py  misc.py
slimdqn/environments/: atari.py  lunar_lander.py
slimdqn/networks/: dqn.py
slimdqn/sample_collection/: __init__.py  accumulator.py  checkpointers.py  elements.py  replay_buffer.py  samplers.py  serialization.py  sum_tree.py  utils.py
tests/: test_atari.py  test_checkpointers.py  test_dqn.py  test_gpu.py  test_iqm.py  test_launch_job.py  test_lunar_lander.py  test_prepare_logs.py  test_replay_buffer.py  test_samplers.py  test_serialization.py  test_sum_tree.py  utils.py
tests/sample_collection/: test_replay_buffer.py
(+10 files in other folders)
