[metadata]
name = slimRL
version = 0.1
description = slimRL. Minimal implementation of RL algorithms.
license = MIT
setup_requires = 
    setuptools
    wheel

[options]
packages = slimRL, experiments, tests
python_requires = >= 3.10
install_requires =
    flax==0.8.4
    gymnasium[box2d]==0.29.1
    jax==0.4.30
    jaxlib==0.4.30
    matplotlib==3.7.5
    multiprocess==0.70.16
    numpy==1.24.4
    optax==0.2.2
    pygame==2.5.2
    pytest==8.2.2
    scipy==1.10.1
    tqdm==4.66.4
    
[options.extras_require]
dev = 
    black

[options.entry_points]
console_scripts =
    lunar_lander_dqn = experiments.lunar_lander.DQN:run
    lunar_lander_vis = experiments.lunar_lander.visualization:run
    car_on_hill_fqi = experiments.car_on_hill.FQI:run
    car_on_hill_fqi_eval = experiments.car_on_hill.compute_metrics:run
    car_on_hill_vis = experiments.car_on_hill.visualization:run
    car_on_hill_opt = experiments.car_on_hill.optimal:run
    plot_iqm = experiments.base.plot_iqm:run