[metadata]
name = slimDQN
version = 0.1
description = slimDQN. Minimal implementation of DQN for many envorinments.
license = MIT
setup_requires = 
    setuptools
    wheel

[options]
packages = slimDQN, experiments, tests
python_requires = >= 3.10
install_requires =
    flax==0.8.4
    gymnasium[box2d]==0.29.1
    ipykernel==6.29.5
    jax==0.4.30
    jaxlib==0.4.30
    matplotlib==3.7.5
    multiprocess==0.70.16
    numpy==1.24.4
    optax==0.2.2
    pygame==2.5.2
    pytest==8.2.2
    scipy==1.10.1
    tqdm==4.66.4
    
[options.extras_require]
dev = 
    black