[metadata]
name = slimdqn
version = 0.1
description = slimdqn. Minimal implementation of DQN for many envorinments.
license = MIT
setup_requires = 
    setuptools
    wheel

[options]
packages = slimdqn, experiments, tests
python_requires = >= 3.10
install_requires =
    ale_py==0.10.1
    flax==0.10.2
    gymnasium[box2d,atari,accept-rom-license]==1.0.0
    gym<=0.25.2
    ipykernel==6.29.5
    jax==0.4.30
    jaxlib==0.4.30
    matplotlib==3.10.0
    multiprocess==0.70.16
    numpy==2.2.1
    optax==0.2.4
    pygame==2.6.1
    pytest==8.2.2
    python-snappy==0.7.3
    scipy==1.14.1
    tqdm==4.66.4
    wandb==0.17.5
    moviepy==1.0.3
    opencv-python==4.10.0.84
    
[options.extras_require]
dev = 
    black
    blackcellmagic
    isort
gpu =
    nvidia-cublas-cu12<=12.4 
    nvidia-cuda-cupti-cu12<=12.4 
    nvidia-cuda-nvcc-cu12<=12.4 
    nvidia-cuda-runtime-cu12<=12.4 
    nvidia-cusolver-cu12<=12.4 
    nvidia-cusparse-cu12<=12.4
    nvidia-nvjitlink-cu12<=12.4 
    jax[cuda12]==0.4.30